Wed May 25 12:59:48 2005  Tanaka Akira  <akr@m17n.org>

	* lib/open-uri.rb (OpenURI::Meta::RE_QUOTED_STRING): a content of 
	  quoted-string should be zero or more characters.

Tue May 24 23:42:16 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (fix_pow): support Fixnum ** Float case directly
	  without coercing.  [ruby-talk:142697] [ruby-talk:143054]

Tue May 24 16:57:24 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.c (require_libraries): caused SEGV when continuation jumped
	  in to the required library code.

Tue May 24 17:45:59 2005  Shugo Maeda  <shugo@ruby-lang.org>

	* test/readline/test_readline.rb: do not test libedit.
	  fixed: [ruby-dev:26217]

Tue May 24 06:45:31 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-font-lock-syntactic-keywords): string
	  literals to be matched non-greedy.

Tue May 24 00:39:14 2005  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/soap/calc: method name 'set' was able to crash with a class Set.
	  [ruby-dev:26210]

	* test/wsdl/document/test_rpc.rb: dateTime comparison failed under
	  TZ=right/Asia/Tokyo (with leap second.) [ruby-dev:26208]

Mon May 23 16:23:06 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: Framework support on MacOS X Tiger.

	* ext/tk/README.tcltklib: add description of Framework support options.

Mon May 23 15:07:34 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub ($(PROGRAM)): add dependency on $(LIBRUBY_SO).
	  [experimental]

Mon May 23 12:21:37 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (make_regexp): should not return junk address during
	  compile time.  [ruby-dev:26206]

Sun May 22 21:54:06 2005  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/{soap,wsdl,xsd}, test/{soap,wsdl,xsd}: imported soap4r/1.5.4.

	  == SOAP client and server ==

	  === for both client side and server side ===

	  * improved document/literal service support.