@@ -1,3 +1,7 @@
+Wed May 25 19:48:12 2005  Minero Aoki  <aamine@loveruby.net>
+
+	* lib/fileutils.rb (rm_r): does chown(2). [ruby-dev:26199]
+
 Wed May 25 12:59:48 2005  Tanaka Akira  <akr@m17n.org>
 
 	* lib/open-uri.rb (OpenURI::Meta::RE_QUOTED_STRING): a content of 
